k8s/backend.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: backend
  name: backend
spec:
  containers:
  - image: 087380303747.dkr.ecr.eu-west-2.amazonaws.com/goals_backend:c44709963c12c72fd9a55c6dd6806b479b17d953
    name: backend
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
