k8s/frontend.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: frontend
  name: frontend
spec:
  containers:
  - image: 087380303747.dkr.ecr.eu-west-2.amazonaws.com/goals_frontend:179e537fe49187db9f169d8006f3943de0c4814e
    name: frontend
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
