k8s/mongo.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: mongo
  name: mongo
spec:
  containers:
  - image: mongo
    name: mongo
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
