k8s/backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: backend
  name: backend-svc
spec:
  type: NodePort
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
    nodePort: 30002
  selector:
    run: backend
status:
  loadBalancer: {}
