k8s/frontend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: frontend
  name: frontend-svc
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
    nodePort: 30001
  selector:
    run: frontend
  type: NodePort
status:
  loadBalancer: {}
