k8s/mongo-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: mongo
  name: mongo-svc
spec:
  ports:
  - port: 27017
    protocol: TCP
    targetPort: 27017
  selector:
    run: mongo
status:
  loadBalancer: {}
