k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-fanout-example
spec:
  rules:
  - host: example.com
    http:
      paths:
      - path: /foo
        pathType: Prefix
        backend:
          service:
            name: frontend-svc
            port:
              number: 3000
      - path: /bar
        pathType: Prefix
        backend:
          service:
            name: backend-svc
            port:
              number: 8080
